apps/guest-vm/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: guest-vm
  labels:
    app.kubernetes.io/name: guest-vm
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: baseline
