apps/guest-vm/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: guest-vm
  namespace: guest-vm
spec:
  endpointSelector:
    matchLabels:
      guest-vm.froystein.jp/role: guest
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: guest-vm-gateway
            app.kubernetes.io/component: remote-access
      toPorts:
        - ports:
            - port: "22"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kubevirt
            k8s:kubevirt.io: virt-api
      toPorts:
        - ports:
            - port: "22"
              protocol: TCP
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "22"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 0.0.0.0/8
            - 10.0.0.0/8
            - 100.64.0.0/10
            - 127.0.0.0/8
            - 169.254.0.0/16
            - 172.16.0.0/12
            - 192.0.0.0/24
            - 192.0.2.0/24
            - 192.31.196.0/24
            - 192.52.193.0/24
            - 192.88.99.0/24
            - 192.168.0.0/16
            - 192.175.48.0/24
            - 198.18.0.0/15
            - 198.51.100.0/24
            - 203.0.113.0/24
            - 224.0.0.0/4
            - 240.0.0.0/4
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: guest-vm-gateway
  namespace: guest-vm
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: guest-vm-gateway
      app.kubernetes.io/component: remote-access
  ingress: []
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            guest-vm.froystein.jp/role: guest
      toPorts:
        - ports:
            - port: "22"
              protocol: TCP
    - toCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 0.0.0.0/8
            - 10.0.0.0/8
            - 100.64.0.0/10
            - 127.0.0.0/8
            - 169.254.0.0/16
            - 172.16.0.0/12
            - 192.0.0.0/24
            - 192.0.2.0/24
            - 192.31.196.0/24
            - 192.52.193.0/24
            - 192.88.99.0/24
            - 192.168.0.0/16
            - 192.175.48.0/24
            - 198.18.0.0/15
            - 198.51.100.0/24
            - 203.0.113.0/24
            - 224.0.0.0/4
            - 240.0.0.0/4
      toPorts:
        - ports:
            - port: "1637"
              protocol: UDP
